--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,7 +206,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Semgrep
-        run: semgrep scan --config auto --config p/java --config p/security-audit --config .semgrep/ --sarif --output semgrep-results.sarif
+        run: |
+          semgrep scan \
+            --config p/java \
+            --config p/security-audit \
+            --config .semgrep/ \
+            --exclude-rule "python.*" \
+            --exclude-rule "generic.*" \
+            --sarif --output semgrep-results.sarif
         continue-on-error: true
 
       - name: Upload Semgrep results
